# goatpy

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  readthedocs.yaml
.github/workflows/: publish.yaml
Tutorial/: align_test.ipynb  auto_align_test.ipynb  goatpy_tutorial.ipynb  preprocessing.ipynb
docs/source/: Conf.py  changelog.md  conf.py  contributing.md  index.rst  installation.md  quickstart.md  requirements.txt
docs/source/guides/: annotations.md  graphpca.md  ihc_alignment.ipynb  landmark_alignment.md  load_and_align.md  pseudo_image.md
docs/source/guides/Tutorials/: ihc_alignment.ipynb  interactive_analysis_gui.ipynb
goatpy/: __init__.py  analysis_gui.py  annotation.py  auto_align.py  batch_correction.py  bin.py  filter.py  graphpca_mod.py  he_image.py  io.py  landmark_alignment.py  plotting.py  preprocessing.py  pseudo_image.py  registration.py  sopa_segmentation.py  tools.py
goatpy/data/: PEAKS.csv  glycan_list.csv  goatpy_MALDI_Glycan_Library_AED_Jul2026.csv
publication_files/: alignment_benchmarking.ipynb
tests/: test_autoalignment.py  test_gui.ipynb  test_gui.py  test_import.py
